--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "prod": "webpack -p",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -34,9 +34,10 @@
     "url-loader": "^0.6.2",
     "webpack": "^4.16.2",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^2.2.0"
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "webfontloader": "^1.6.28"
   }
 }
